<resources>
    <string name="app_name">SDMIT PLACEMENT</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="password">Enter Password</string>
    <string name="email">Email</string>
    <string name="remember_me">Remember Me</string>
    <string name="name">Name</string>
    <string name="USN">USN</string>
    <string name="Phone">Phone</string>
    <string name="re_enter_password">Re Enter Password</string>
    <string name="already_a_user">Already A User ? Click Here</string>
    <string name="didn_t_recieve_otp_yet">Didn\'t receieve OTP yet?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verification">Verification</string>
    <string name="verification_code_will_be_sent_to">Verification code will be sent to</string>
    <string name="verify">Verify</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="visit_blog">Visit Blog</string>
    <string name="email_id">Email Id</string>
    <string name="submit">Submit</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="update">Update</string>
    <string name="logout_msg">Are you sure want to logout?</string>
    <string name="yes_dialog">Yes!</string>
    <string name="no_dialog">No</string>
    <string name="msg_dialog">Are you sure want to close SDMIT Placement ?</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">Enter New Password</string>
    <string name="old_password">Enter Old Password</string>
    <string name="admin">Admin</string>
    <string name="student">Student</string>
    <string name="education_details">Education Details</string>
    <string name="send_notification">Send Notification</string>
    <string name="send">Send</string>
    <string name="sslc">SSLC (%)</string>
    <string name="cgpa">CGPA</string>
    <string name="sem_8">SEM 8 (SGPA)</string>
    <string name="sem_7_sgpa">SEM 7 (SGPA)</string>
    <string name="sem_6_sgpa">SEM 6 (SGPA)</string>
    <string name="sem_5_sgpa">SEM 5 (SGPA)</string>
    <string name="sem_4_sgpa">SEM 4 (SGPA)</string>
    <string name="sem_3_sgpa">SEM 3 (SGPA)</string>
    <string name="sem_2_sgpa">SEM 2 (SGPA)</string>
    <string name="sem_1_sgpa">SEM 1 (SGPA)</string>
    <string name="puc">PUC (%)</string>
    <string name="education_details_edit">Education Details Edit</string>
    <string name="users">Users</string>
    <string name="filter_users">Filter Users</string>
    <string name="add_filter">Add Filter</string>
    <string name="view_all_users">View All Users</string>
    <string name="user_details">User Details</string>
    <string name="Device">Device</string>
    <string name="visit_placement_blog">Visit Placement Blog</string>
    <string name="notification_delete">Are You Sure To Delete ?</string>

    <string name="app_id">ca-app-pub-9931840634396279~9939247856</string>
    <!-- release -->

    <string name="ad_banner_id">ca-app-pub-9931840634396279/7694220281</string>
    <string name="ad_reward_id">ca-app-pub-9931840634396279/5042144394</string>


    <!-- debug -->

<!--    <string name="ad_banner_id">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="ad_reward_id">ca-app-pub-3940256099942544/5224354917</string>-->


        </resources>
