<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/change_password"
            android:icon="@drawable/ic_lock_black_24dp"
            android:title="Change Password" />
        <item
            android:id="@+id/education_details"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/education_details" />
        <item
            android:id="@+id/send_notification"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/send_notification"
            android:visible="false"/>
        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>


</menu>
