<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/back"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Signup">




        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shapeemail"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/name"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/shapeemail"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white" />


        <EditText
            android:id="@+id/usn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shapeemail"
            android:drawableLeft="@drawable/ic_format_list_numbered_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/USN"
            android:maxLength="10"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shapeemail"
            android:drawableLeft="@drawable/ic_phone_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/Phone"
            android:inputType="number"
            android:maxLength="10"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/shapeemail"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shapeemail"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white" />


        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shapesignup"
            android:onClick="register"
            android:padding="15dp"
            android:shadowColor="@android:color/transparent"
            android:text="@string/sign_up"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/already_a_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:drawablePadding="6dp"
                android:onClick="already_a_user"
                android:padding="4dp"
                android:text="@string/already_a_user"
                android:textAlignment="center"
                android:textColor="@color/white" />


        </LinearLayout>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_gravity="bottom"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/ad_banner_id">
        </com.google.android.gms.ads.AdView>


    </LinearLayout>



