<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChangePassword">

    <RelativeLayout
        android:id="@+id/action_bar_menus"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/backgroundbg"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/llBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_left_arrow"
                android:textColor="@color/white"
                android:onClick="go_back_to_dashboard"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>


<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    android:visibility="visible"
    android:id="@+id/password_layout">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/old_password" />

    <EditText
        android:id="@+id/EtOldPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/new_password" />

    <EditText
        android:id="@+id/EtNewPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/re_enter_password" />

    <EditText
        android:id="@+id/EtConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/BtnUpdate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_selector_app"
        android:text="@string/update"
        android:textColor="@color/white"
        android:onClick="change_password"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_gravity="bottom"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_id">
    </com.google.android.gms.ads.AdView>

</LinearLayout>

</LinearLayout>