<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgotPassword">

    <RelativeLayout
        android:id="@+id/action_bar_menus"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/backgroundbg"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/llBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_left_arrow"
                android:textColor="@color/white"
                android:onClick="go_back_to_login"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:hint="@string/email_id"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:singleLine="true" />



        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_selector_red"
            android:gravity="center"
            android:text="@string/submit"
            android:onClick="submit"
            android:textColor="@color/white" />




    </LinearLayout>


</LinearLayout>